--- a/sass/blocks/best-seller.scss
+++ b/sass/blocks/best-seller.scss
@@ -1,11 +1,34 @@
 .best-seller {
   padding-top: 28px;
+  position: relative;
+
+  &:before {
+    display: none;
+    content: "";
+    position: absolute;
+    top: -19px;
+    width: 100%;
+    height: 24px;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-repeat: repeat-x;
+    background-size: 768px 24px;
+  }
 
   @media ($tablet) {
+    &:before {
+      display: block;
+    }
+
     padding-top: 39px;
   }
 
   @media ($desktop) {
+    &:before {
+      height: 34px;
+      top: 17px;
+      background-size: 1150px 34px;
+    }
+
     padding-top: 0;
     margin-top: -42px;
   }
@@ -25,6 +48,7 @@
   }
 
   @media ($desktop) {
+    margin-bottom: 35px;
     transform: translateY(159px);
   }
 }
@@ -69,9 +93,10 @@
   }
 
   @media ($desktop) {
-    padding-left: 25px;
+    padding-left: 21px;
     padding-right: 25px;
-    width: 125px;
+    margin-top: 15px;
+    //width: 125px;
   }
 }
 
@@ -117,8 +142,8 @@
   }
 
   @media ($desktop) {
-    margin-bottom: 48px;
-    padding-top: 166px;
+    margin-bottom: 49px;
+    padding-top: 165px;
   }
 }
 
