--- a/sass/blocks/features.scss
+++ b/sass/blocks/features.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 7px;
     background-image: url("../img/bg-zigzag-line.svg");
-    background-size: contain;
+    background-size: 320px 7px;
     background-repeat: repeat-x;
   }
 
@@ -18,12 +18,16 @@
     padding-top: 53px;
 
     &:before {
+      top: 53px;
+      background-size: 768px 17px;
       height: 17px;
     }
   }
 
   @media ($desktop) {
     &:before {
+      top: 73px;
+      background-size: 1150px 23px;
       height: 23px;
     }
   }
