--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -1,21 +1,11 @@
 .promo {
-  position: relative;
   padding-top: 70px;
 
   background-color: #fafafa;
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -20px;
-
-  &:after {
-    display: none;
-    content: "";
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 24px;
-    background-image: url("../img/bg-zigzag-fill.svg");
-  }
+  //background-size: cover;
 
   @media #{$retina} {
     background-image: url("../img/hero-mobile@2x.jpg");
@@ -24,11 +14,8 @@
   @media ($tablet) {
     padding-top: 97px;
     background-image: url("../img/hero-desktop@1x.jpg");
+    background-position: center -50px;
     background-size: cover;
-
-    &:after {
-      display: block;
-    }
 
     @media #{$retina} {
       background-image: url("../img/hero-desktop@2x.jpg");
@@ -36,11 +23,7 @@
   }
 
   @media ($desktop) {
-    background-position: center -80px;
-
-    &:after {
-      height: 34px;
-    }
+    background-position: center -56px;
   }
 }
 
