--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,5 +1,17 @@
 .reviews {
+  position: relative;
   padding-top: 28px;
+
+  &:before {
+    content: "";
+    position: absolute;
+    bottom: -51px;
+    width: 100%;
+    height: 7px;
+    background-image: url("../img/bg-zigzag-line.svg");
+    background-size: 320px 7px;
+    background-repeat: repeat-x;
+  }
 
   @media ($tablet) {
     margin-bottom: 80px;
@@ -10,6 +22,12 @@
     background-position: 0 0;
     background-size: contain;
 
+    &:before {
+      bottom: -86px;
+      background-size: 768px 17px;
+      height: 17px;
+    }
+
     @media #{$retina} {
       background-image: url("../img/review@2x.jpg");
     }
@@ -18,6 +36,13 @@
   @media ($desktop) {
     background: none;
     padding-top: 7px;
+
+    &:before {
+      top: auto;;
+      bottom: -89px;
+      background-size: 1150px 23px;
+      height: 23px;
+    }
   }
 }
 
@@ -115,7 +140,7 @@
 
   @media ($desktop) {
     flex-basis: 350px;
-    padding-bottom: 100px;
+    padding-bottom: 97px;
     margin-top: 36px;
   }
 }
