--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -2,6 +2,31 @@
   position: relative;
 
   background-color: $color-background;
+
+  @media ($tablet) {
+    &--zigzag {
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -12px;
+        width: 100%;
+        height: 24px;
+        background-image: url("../img/bg-zigzag-fill.svg");
+        background-repeat: repeat-x;
+        background-size: 768px 24px;
+      }
+    }
+  }
+
+  @media ($desktop) {
+    &--zigzag {
+      &::after {
+        bottom: -20px;
+        height: 34px;
+        background-size: 1150px 34px;
+      }
+    }
+  }
 }
 
 .main-header__container {
@@ -81,6 +106,7 @@
   @media ($desktop) {
     font-size: 53px;
     line-height: 57px;
+    padding-bottom: 100px;
   }
 }
 
