--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,5 +1,12 @@
 .production {
+  margin-bottom: 57px;
+
+  @media ($tablet) {
+    margin-bottom: 64px;
+  }
+
   @media ($desktop) {
+    margin-bottom: 103px;
   }
 }
 
@@ -47,7 +54,11 @@
   flex-direction: column;
   flex-wrap: wrap;
   border: 1px solid #ececec;
-  padding-top: 18px;
+  padding-top: 23px;
+
+  &:hover {
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
+  }
 
   @include container;
 
@@ -75,6 +86,17 @@
   background-repeat: no-repeat;
   border: 0;
   transform: translate(-50%, -50%);
+
+  @media ($tablet) {
+    top: 51%;
+    transform: translate(-50%, -49%);
+  }
+
+  @media ($desktop) {
+    top: 50%;
+    left: 51%;
+    transform: translate(-49%, -50%);
+  }
 
   &:hover {
     transform: scale(1.2) translate(-40%, -40%);
@@ -113,7 +135,7 @@
   @media ($tablet) {
     margin-bottom: 4px;
     padding-right: 42px;
-    padding-left: 100px;
+    padding-left: 105px;
 
     font-size: 20px;
     line-height: 24px;
