--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -21,28 +21,26 @@
     margin-bottom: 32px;
   }
 
-  &--mail {
-
-  }
-
   @media ($tablet) {
-    margin-bottom: 26px;
     display: flex;
     align-items: baseline;
+    margin-bottom: 26px;
 
     &--category {
       @include container;
     }
 
     &--color {
-      padding-bottom: 49px;
-      padding-top: 27px;
-      background-color: #f1f1f1;
       margin-bottom: 20px;
+      padding-top: 27px;
+      padding-bottom: 49px;
+
+      background-color: #f1f1f1;
     }
 
     &--name {
       margin-bottom: 30px;
+
       @include container;
     }
 
@@ -53,14 +51,6 @@
 
   @media ($desktop) {
     padding-left: 112px;
-
-    &--name {
-      width: auto;
-    }
-
-    &--category {
-      width: auto;
-    }
   }
 }
 
@@ -72,9 +62,10 @@
   }
 
   @media ($tablet) {
-    margin: 0;
     display: flex;
     align-items: baseline;
+    margin: 0;
+
     @include container;
 
     &--phone {
@@ -122,18 +113,20 @@
 .order-form__title {
   display: flex;
   flex-shrink: 0;
+
   @include form-title;
 
   &::after {
-    display: block;
     content: "";
-    margin-left: 27px;
-    width: 50px;
 
+    display: block;
     flex-grow: 1;
-    height: 1px;
-    background-color: $color-cyan;
     align-self: center;
+    width: 50px;
+    height: 1px;
+    margin-left: 27px;
+
+    background-color: $color-cyan;
   }
 
   @media ($tablet) {
@@ -145,7 +138,7 @@
   }
 
   @media ($desktop) {
-    width: 113px
+    width: 113px;
   }
 }
 
@@ -181,27 +174,29 @@
 
     &--small {
       display: flex;
-      align-items: baseline;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin-bottom: 0;
+      align-items: baseline;
       margin-top: 0;
+      margin-bottom: 0;
     }
 
     &--gray {
-      background-color: #f1f1f1;
       padding-bottom: 21px;
+
+      background-color: #f1f1f1;
     }
 
     &--box {
       margin-top: 50px;
+
       @include container;
     }
   }
 
   @media ($desktop) {
-    width: 926px;
     justify-content: flex-start;
+    width: 926px;
 
     &--gray {
       width: auto;
@@ -244,8 +239,8 @@
 .order-form__lines--name .order-form__line {
   @media ($tablet) {
     display: flex;
-    width: 500px;
     align-items: baseline;
+    width: 500px;
     margin-bottom: 20px;
   }
 
@@ -271,13 +266,14 @@
 .order-form__label {
   position: relative;
 
+  display: block;
   padding-left: 62px;
+
+  font-weight: bold;
   font-size: 17px;
   line-height: 18px;
-  color: $color-text-title;
-  font-weight: bold;
-  display: block;
   vertical-align: middle;
+  color: $color-text-title;
 
   &--f-name,
   &--s-name,
@@ -299,31 +295,36 @@
 
   &--radio {
     padding-top: 16px;
+
     cursor: pointer;
 
     &::before {
+      content: "";
       position: absolute;
-      left: 0;
       top: 7px;
+      left: 0;
+
+      display: block;
       width: 36px;
       height: 35px;
-      content: "";
-      display: block;
-      border-radius: 50%;
+
       border: 2px solid #444444;
+      border-radius: 50%;
     }
 
     &::after {
+      content: "";
       position: absolute;
       top: 18px;
       left: 12px;
+
+      display: block;
+      display: none;
       width: 16px;
       height: 16px;
-      content: "";
-      display: block;
-      border-radius: 50%;
+
       background-color: $color-cyan;
-      display: none;
+      border-radius: 50%;
     }
   }
 
@@ -336,41 +337,48 @@
   &--checkbox {
     padding-top: 20px;
     padding-bottom: 6px;
+
     cursor: pointer;
 
     &::before {
+      content: "";
       position: absolute;
       top: 7px;
       left: 0;
+
+      display: block;
       width: 36px;
       height: 36px;
-      content: "";
-      display: block;
+
       border: 2px solid #444444;
     }
 
     &::after {
+      content: "";
       position: absolute;
       top: 20px;
       left: 9px;
+
+      display: block;
+      display: none;
       width: 20px;
       height: 8px;
-      content: "";
-      display: block;
-      border-left: 2px solid #000000;
+
       border-bottom: 2px solid #000000;
+      border-left: 2px solid #000000;
       transform: rotate(-45deg);
-      display: none;
     }
   }
 
   @media ($tablet) {
-    font-size: 19px;
     padding-left: 80px;
+
+    font-size: 19px;
 
     &--radio {
       &::before {
-        top: 0px;
+        top: 0;
+
         width: 48px;
         height: 47px;
       }
@@ -378,6 +386,7 @@
       &::after {
         top: 16px;
         left: 16px;
+
         width: 20px;
         height: 20px;
       }
@@ -392,6 +401,7 @@
       &:after {
         top: 21px;
         left: 12px;
+
         width: 28px;
         height: 13px;
       }
@@ -400,12 +410,12 @@
 }
 
 .order-form__label--radio:hover::before,
-.order-form__label--checkbox:hover::before  {
+.order-form__label--checkbox:hover::before {
   border-color: $color-cyan;
 }
 
 .order-form__label--radio:active::before,
-.order-form__label--checkbox:active::before  {
+.order-form__label--checkbox:active::before {
   border-color: #c7c7c7;
 }
 
@@ -418,20 +428,22 @@
 }
 
 .order-form__text {
-  background-color: transparent;
   box-sizing: border-box;
   width: 100%;
-  border: 0;
   padding-top: 12px;
-  padding-bottom: 14px;
   padding-right: 40px;
+  padding-bottom: 14px;
+
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 24px;
+  font-family: "Open Sans", Arial, sans-serif;
+  color: #000000;
+
+  background-color: transparent;
+  border: 0;
   border-bottom: 2px solid #000000;
   outline: none;
-  font-family: "Open Sans", Arial, sans-serif;
-  font-size: 17px;
-  font-weight: normal;
-  line-height: 24px;
-  color: #000000;
 
   &:hover,
   &:focus {
@@ -439,11 +451,13 @@
   }
 
   &--box {
-    resize: none;
     height: 142px;
     padding-top: 15px;
-    border: 2px solid #000000;
     padding-left: 14px;
+
+    border: 2px solid #000000;
+
+    resize: none;
 
     &:hover,
     &:focus {
@@ -453,9 +467,9 @@
 
   @media ($tablet) {
     padding-top: 18px;
+    padding-right: 70px;
     padding-bottom: 12px;
     padding-left: 14px;
-    padding-right: 70px;
   }
 }
 
@@ -487,12 +501,14 @@
 
 .order-form__caption {
   position: relative;
+
   display: flex;
-  @include form-title;
   align-items: center;
   margin-bottom: 7px;
 
-/*
+  @include form-title;
+
+  /*
   &--mail {
     padding-top: 15px;
   }
@@ -504,13 +520,14 @@
   }
 
   &::after {
-    display: block;
     content: "";
-    margin-left: 25px;
-    width: 50px;
 
+    display: block;
     flex-grow: 1;
+    width: 50px;
     height: 1px;
+    margin-left: 25px;
+
     background-color: $color-cyan;
   }
 
@@ -534,25 +551,27 @@
   }
 
   @media ($desktop) {
-    margin-left: 113px;;
     margin-top: 49px;
+    margin-left: 113px;;
   }
 }
 
 .order-form__note {
   display: block;
+  margin-top: 10px;
+  margin-bottom: 31px;
+
   font-size: 14px;
   line-height: 16px;
-  margin-bottom: 31px;
-  margin-top: 10px;
 
   @media ($tablet) {
     order: 1;
+
     font-size: 17px;
   }
 
   @media ($desktop) {
-    margin-left: auto;
     margin-right: 111px;
+    margin-left: auto;
   }
 }
