--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -29,6 +29,7 @@
     width: 668px;
     height: 455px;
     margin-bottom: 39px;
+
     background-image: url("../img/video-tablet@1x.jpg");
 
     @media #{$retina} {
@@ -41,6 +42,7 @@
     height: 455px;
     margin-right: 22px;
     margin-bottom: 0;
+
     background-image: url("../img/video-desktop@1x.jpg");
 
     @media #{$retina} {
@@ -53,14 +55,15 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 1px solid #ececec;
   padding-top: 23px;
 
-  &:hover {
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.1);
-  }
+  border: 1px solid #ececec;
 
   @include container;
+
+  &:hover {
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+  }
 
   @media ($tablet) {
     padding-top: 0;
@@ -68,6 +71,7 @@
 
   @media ($desktop) {
     height: 455px;
+
     border: 1px solid #ececec;
   }
 }
@@ -89,12 +93,14 @@
 
   @media ($tablet) {
     top: 51%;
+
     transform: translate(-50%, -49%);
   }
 
   @media ($desktop) {
     top: 50%;
     left: 51%;
+
     transform: translate(-49%, -50%);
   }
 
@@ -103,8 +109,8 @@
   }
 
   &:active {
-    opacity: 0.3;
     transform: scale(0.8) translate(-60%, -60%);
+    opacity: 0.3;
   }
 }
 
@@ -112,21 +118,22 @@
   position: relative;
 
   margin: 0;
+  margin-bottom: 24px;
+  padding-left: 90px;
 
   font-weight: bold;
   font-size: 17px;
   line-height: 24px;
   color: $color-text-title;
-  padding-left: 90px;
-  margin-bottom: 24px;
 
   &::before {
     content: "";
     position: absolute;
-    width: 32px;
-    height: 32px;
     top: 6px;
     left: 34px;
+
+    width: 32px;
+    height: 32px;
 
     background-image: url("../img/icon-video.svg");
     background-repeat: no-repeat;
@@ -141,8 +148,8 @@
     line-height: 24px;
 
     &::before {
-      bottom: 0;
       top: -6px;
+      bottom: 0;
       left: 42px;
     }
   }
@@ -150,9 +157,9 @@
   @media ($desktop) {
     width: 210px;
     padding-top: 0;
+    padding-top: 95px;
     padding-right: 0;
     padding-left: 0;
-    padding-top: 95px;
 
     &::before {
       top: 41px;
@@ -162,28 +169,29 @@
 }
 
 .production__description {
-  padding-left: 34px;
-  padding-right: 34px;
-  font-size: 13px;
   margin: 0;
   margin-top: 27px;
   margin-bottom: 25px;
+  padding-right: 34px;
+  padding-left: 34px;
+
+  font-size: 13px;
 
   @media ($tablet) {
+    margin-bottom: 35px;
     padding-right: 42px;
     padding-left: 42px;
-    margin-bottom: 35px;
 
     font-size: 15px;
     line-height: 30px;
   }
 
   @media ($desktop) {
+    width: 226px;
+    margin-top: 29px;
+    margin-bottom: 46px;
     padding-right: 0;
     padding-left: 0;
-    margin-top: 29px;
-    width: 226px;
-    margin-bottom: 46px;
   }
 }
 
@@ -195,8 +203,8 @@
   @media ($tablet) {
     width: 586px;
     margin-right: 42px;
-    margin-left: 42px;
     margin-bottom: 45px;
+    margin-left: 42px;
   }
 
   @media ($desktop) {
