--- a/sass/blocks/promo.scss
+++ b/sass/blocks/promo.scss
@@ -5,20 +5,21 @@
   background-image: url("../img/hero-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center -20px;
-  //background-size: cover;
 
   @media #{$retina} {
     background-image: url("../img/hero-mobile@2x.jpg");
+    background-size: 580px auto;
   }
 
   @media ($tablet) {
     padding-top: 97px;
+
     background-image: url("../img/hero-desktop@1x.jpg");
     background-position: center -50px;
-    background-size: cover;
 
     @media #{$retina} {
       background-image: url("../img/hero-desktop@2x.jpg");
+      background-size: 1147px auto;
     }
   }
 
@@ -45,14 +46,22 @@
 
   @media ($tablet) {
     margin-bottom: 373px;
+
     font-size: 43px;
     line-height: 50px;
   }
 
   @media ($desktop) {
+    margin-bottom: 359px;
+
     font-size: 53px;
     line-height: 57px;
-    margin-bottom: 359px;
+  }
+}
+
+.promo__title br:first-child {
+  @media ($tablet) {
+    display: none;
   }
 }
 
@@ -66,9 +75,11 @@
 
   @media ($tablet) {
     flex-direction: row;
-    @include container;
-    font-size: 0;
     align-items: flex-start;
+
+    font-size: 0;
+
+    @include container;
 
     &:hover {
       margin-top: 0;
@@ -101,17 +112,18 @@
   }
 
   @media ($tablet) {
-    line-height: 30px;
-    padding-left: 36px;
     box-sizing: border-box;
-    font-size: 19px;
     width: 50%;
-    padding-bottom: 38px;
     padding-top: 28px;
+    padding-bottom: 38px;
+    padding-left: 36px;
+
+    font-size: 19px;
+    line-height: 30px;
 
     &:hover {
-      padding-bottom: 43px;
       margin-top: -5px;
+      padding-bottom: 43px;
     }
   }
 }
@@ -126,16 +138,17 @@
 
 .promo__align-center {
   position: relative;
+
   display: block;
   width: 190px;
-  padding-right: 70px;
   margin: 0 auto;
+  padding-right: 70px;
 
   &::before {
     content: "";
     position: absolute;
-    right: 5px;
     top: -1px;
+    right: 5px;
 
     opacity: 0.5;
   }
@@ -152,8 +165,8 @@
 
   &--toys {
     &::before {
-      right: -3px;
       top: -5px;
+      right: -3px;
 
       width: 61px;
       height: 61px;
@@ -174,8 +187,8 @@
 
     &--toys {
       &::before {
-        right: 3px;
         top: 3px;
+        right: 3px;
       }
     }
   }
