--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,16 +1,19 @@
 .reviews {
   position: relative;
+
   padding-top: 28px;
 
   &:before {
     content: "";
     position: absolute;
     bottom: -51px;
+
     width: 100%;
     height: 7px;
+
     background-image: url("../img/bg-zigzag-line.svg");
-    background-size: 320px 7px;
     background-repeat: repeat-x;
+    background-size: 320px 7px;
   }
 
   @media ($tablet) {
@@ -24,8 +27,10 @@
 
     &:before {
       bottom: -86px;
-      background-size: 768px 17px;
+
       height: 17px;
+
+      background-size: 768px 17px;
     }
 
     @media #{$retina} {
@@ -34,14 +39,17 @@
   }
 
   @media ($desktop) {
-    background: none;
     padding-top: 7px;
 
+    background: none;
+
     &:before {
-      top: auto;;
+      top: auto;
       bottom: -89px;
-      background-size: 1150px 23px;
+
       height: 23px;
+
+      background-size: 1150px 23px;;
     }
   }
 }
@@ -50,20 +58,19 @@
   display: flex;
   flex-direction: column;
 
-
   @include container;
 
   @media ($tablet) {
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: flex-start;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   @media ($desktop) {
+    width: 875px;
     padding-top: 70px;
     padding-left: 175px;
-    width: 875px;
 
     background-image: url("../img/review@1x.jpg");
     background-repeat: no-repeat;
@@ -98,9 +105,10 @@
   }
 
   @media ($desktop) {
+    margin-top: 0;
+
     font-size: 53px;
     line-height: 57px;
-    margin-top: 0;
   }
 }
 
@@ -132,22 +140,23 @@
 
   @media ($tablet) {
     order: 3;
-    padding-bottom: 46px;
     margin-top: 58px;
+    padding-bottom: 46px;
 
     font-size: 17px;
   }
 
   @media ($desktop) {
     flex-basis: 350px;
-    padding-bottom: 97px;
     margin-top: 36px;
+    padding-bottom: 97px;
   }
 }
 
 .reviews__author-contact {
   display: inline-block;
   margin-top: 3px;
+
   font-weight: normal;
   font-size: 18px;
   line-height: 30px;
@@ -165,10 +174,9 @@
 
   @media ($tablet) {
     order: 4;
-    margin-right: 5px;
-    margin-top: 60px;
-
     width: 167px;
+    margin-top: 60px;
+    margin-right: 5px;
   }
 
   @media ($desktop) {
