--- a/sass/blocks/user-nav.scss
+++ b/sass/blocks/user-nav.scss
@@ -10,8 +10,9 @@
   @media (max-width: 767px) {
     position: absolute;
     top: 247px;
-    background-color: #ffffff;
     z-index: 2;
+
+    background-color: #ffffff;
 
     &--closed {
       display: none;
@@ -28,8 +29,9 @@
 }
 
 .no-js .user-nav {
-  display: block;
   position: static;
+
+  display: block;
 }
 
 .user-nav__item {
@@ -39,6 +41,7 @@
     display: inline-block;
 
     vertical-align: top;
+
     border-top: 0;
   }
 }
@@ -70,9 +73,9 @@
   }
 
   @media ($tablet) {
+    padding-right: 0;
     padding-bottom: 35px;
     padding-left: 37px;
-    padding-right: 0px;
 
     &--search {
       font-size: 0;
@@ -103,7 +106,6 @@
 
 .user-nav__align-center svg {
   position: absolute;
-
   left: 0;
 
   @media ($tablet) {
