--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -16,6 +16,7 @@
   width: 260px;
   height: 150px;
 
+  background-color: #f1f1f1;
   background-image: url("../img/video-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,6 +87,7 @@
   margin: 0;
   padding: 0;
 
+  background-color: transparent;
   background-image: url("../img/icon-play.svg");
   background-repeat: no-repeat;
   border: 0;
