--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -91,7 +91,8 @@
   }
 
   @media ($desktop) {
-    right: 232px;
+    //right: 232px;
+    right: 22.8%;
   }
 }
 
@@ -102,7 +103,8 @@
   }
 
   @media ($desktop) {
-    right: 229px;
+    //right: 229px;
+    right: 22.7%;
   }
 }
 
