--- a/sass/blocks/order-form.scss
+++ b/sass/blocks/order-form.scss
@@ -467,6 +467,10 @@
   border-bottom: 2px solid #000000;
   outline: none;
 
+  @media ($tablet) {
+    font-size: 19px;
+  }
+
   &:hover,
   &:focus {
     border-bottom: 2px solid $color-cyan;
@@ -484,6 +488,10 @@
     &:hover,
     &:focus {
       border: 2px solid $color-cyan;
+    }
+
+    @media ($tablet) {
+      font-size: 19px;
     }
   }
 
